java version downgrade to java 8