@@ -2,7 +2,7 @@ package org.ton.structs;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -21,12 +21,12 @@ public class TrieTest {
         trie.insert(key2, val2);
         boolean result = trie.contains(key1);
         assertTrue(result);
-        assertEquals(List.of(key2, key1), trie.find("Er")); // supports lower case and upper case separately
-        assertEquals(List.of(), trie.find("er")); // empty list
+        assertEquals(Arrays.asList(key2, key1), trie.find("Er")); // supports lower case and upper case separately
+        assertEquals(Arrays.asList(), trie.find("er")); // empty list
 
         String key3 = "John", val3 = "Doe";
         trie.insert(key3, val3);
-        assertEquals(List.of(key3), trie.find(key3));
+        assertEquals(Arrays.asList(key3), trie.find(key3));
 
         String resultValue = trie.getValue(key3);
         assertNotNull(resultValue);
